# kwasm

./: .gitignore  Cargo.toml  README.md  index.html  web_build.sh
examples/: fetch.rs  hello.js  hello.rs  test.js  test.rs  web_worker.rs
examples/with_wasm_bindgen/: Cargo.toml  build.sh  index.html
examples/with_wasm_bindgen/src/: main.rs
js/: kwasm.js
src/: js_helpers.js  js_object.rs  lib.rs  panic_hook.rs  web_worker.rs
src/libraries/: console.rs  eval.rs  fetch.js  fetch.rs  instant.rs  web_worker.js  web_worker.rs
